--- a/Data/Analyza Dat Jupyter.ipynb
+++ b/Data/Analyza Dat Jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f0cf7a49",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "562b4856",
    "metadata": {},
    "outputs": [],
@@ -36,10 +36,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dcef28b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Dataset: Ad_table ===\n",
+      "Počet řádků: 268255\n",
+      "Počet sloupců: 24\n",
+      "Počet null hodnot ve sloupcích:\n",
+      "Maker               0\n",
+      " Genmodel           0\n",
+      " Genmodel_ID        0\n",
+      "Adv_ID              0\n",
+      "Adv_year            0\n",
+      "Adv_month           0\n",
+      "Color           21875\n",
+      "Reg_year            7\n",
+      "Bodytype          954\n",
+      "Runned_Miles     1055\n",
+      "Engin_size       2064\n",
+      "Gearbox           167\n",
+      "Fuel_type         409\n",
+      "Price            1145\n",
+      "Engine_power    31811\n",
+      "Annual_Tax      46675\n",
+      "Wheelbase       27998\n",
+      "Height          27801\n",
+      "Width           28080\n",
+      "Length          27801\n",
+      "Average_mpg     41933\n",
+      "Top_speed       43602\n",
+      "Seat_num         6474\n",
+      "Door_num         4553\n",
+      "dtype: int64\n",
+      "Počet unikátních hodnot ve sloupcích:\n",
+      "Maker               88\n",
+      " Genmodel          896\n",
+      " Genmodel_ID       881\n",
+      "Adv_ID          268255\n",
+      "Adv_year            10\n",
+      "Adv_month           15\n",
+      "Color               22\n",
+      "Reg_year            26\n",
+      "Bodytype            18\n",
+      "Runned_Miles     72420\n",
+      "Engin_size          74\n",
+      "Gearbox              3\n",
+      "Fuel_type           13\n",
+      "Price            20456\n",
+      "Engine_power       466\n",
+      "Annual_Tax          28\n",
+      "Wheelbase          427\n",
+      "Height             579\n",
+      "Width              475\n",
+      "Length             984\n",
+      "Average_mpg        358\n",
+      "Top_speed          138\n",
+      "Seat_num            10\n",
+      "Door_num             7\n",
+      "dtype: int64\n",
+      "=== Dataset: Image_table ===\n",
+      "Počet řádků: 1451784\n",
+      "Počet sloupců: 5\n",
+      "Počet null hodnot ve sloupcích:\n",
+      "Genmodel_ID                  0\n",
+      "Image_ID                     0\n",
+      "Image_name                   0\n",
+      "Predicted_viewpoint          0\n",
+      "Quality_check          1364791\n",
+      "dtype: int64\n",
+      "Počet unikátních hodnot ve sloupcích:\n",
+      "Genmodel_ID                865\n",
+      "Image_ID               1450932\n",
+      "Image_name             1451784\n",
+      "Predicted_viewpoint          9\n",
+      "Quality_check                2\n",
+      "dtype: int64\n",
+      "=== Dataset: Price_table ===\n",
+      "Počet řádků: 6333\n",
+      "Počet sloupců: 5\n",
+      "Počet null hodnot ve sloupcích:\n",
+      "Maker          0\n",
+      "Genmodel       0\n",
+      "Genmodel_ID    0\n",
+      "Year           0\n",
+      "Entry_price    0\n",
+      "dtype: int64\n",
+      "Počet unikátních hodnot ve sloupcích:\n",
+      "Maker            60\n",
+      "Genmodel        632\n",
+      "Genmodel_ID     647\n",
+      "Year             24\n",
+      "Entry_price    3402\n",
+      "dtype: int64\n",
+      "=== Dataset: Sales_table ===\n",
+      "Počet řádků: 773\n",
+      "Počet sloupců: 23\n",
+      "Počet null hodnot ve sloupcích:\n",
+      "Maker          0\n",
+      "Genmodel       0\n",
+      "Genmodel_ID    0\n",
+      "2020           0\n",
+      "2019           0\n",
+      "2018           0\n",
+      "2017           0\n",
+      "2016           0\n",
+      "2015           0\n",
+      "2014           0\n",
+      "2013           0\n",
+      "2012           0\n",
+      "2011           0\n",
+      "2010           0\n",
+      "2009           0\n",
+      "2008           0\n",
+      "2007           0\n",
+      "2006           0\n",
+      "2005           0\n",
+      "2004           0\n",
+      "2003           0\n",
+      "2002           0\n",
+      "2001           0\n",
+      "dtype: int64\n",
+      "Počet unikátních hodnot ve sloupcích:\n",
+      "Maker           73\n",
+      "Genmodel       772\n",
+      "Genmodel_ID    734\n",
+      "2020           321\n",
+      "2019           355\n",
+      "2018           359\n",
+      "2017           357\n",
+      "2016           354\n",
+      "2015           337\n",
+      "2014           337\n",
+      "2013           325\n",
+      "2012           316\n",
+      "2011           301\n",
+      "2010           303\n",
+      "2009           314\n",
+      "2008           302\n",
+      "2007           302\n",
+      "2006           295\n",
+      "2005           278\n",
+      "2004           261\n",
+      "2003           249\n",
+      "2002           220\n",
+      "2001           213\n",
+      "dtype: int64\n",
+      "=== Dataset: Wolt ===\n",
+      "Počet řádků: 18706\n",
+      "Počet sloupců: 14\n",
+      "Počet null hodnot ve sloupcích:\n",
+      "Unnamed: 0                                                0\n",
+      "TIMESTAMP                                                 0\n",
+      "ACTUAL_DELIVERY_MINUTES - ESTIMATED_DELIVERY_MINUTES      0\n",
+      "ITEM_COUNT                                                0\n",
+      "USER_LAT                                                  0\n",
+      "USER_LONG                                                 0\n",
+      "VENUE_LAT                                                 0\n",
+      "VENUE_LONG                                                0\n",
+      "ESTIMATED_DELIVERY_MINUTES                                0\n",
+      "ACTUAL_DELIVERY_MINUTES                                   0\n",
+      "CLOUD_COVERAGE                                          277\n",
+      "TEMPERATURE                                             277\n",
+      "WIND_SPEED                                              277\n",
+      "PRECIPITATION                                             0\n",
+      "dtype: int64\n",
+      "Počet unikátních hodnot ve sloupcích:\n",
+      "Unnamed: 0                                              18706\n",
+      "TIMESTAMP                                               15135\n",
+      "ACTUAL_DELIVERY_MINUTES - ESTIMATED_DELIVERY_MINUTES       72\n",
+      "ITEM_COUNT                                                 11\n",
+      "USER_LAT                                                   49\n",
+      "USER_LONG                                                  72\n",
+      "VENUE_LAT                                                  55\n",
+      "VENUE_LONG                                                 84\n",
+      "ESTIMATED_DELIVERY_MINUTES                                 55\n",
+      "ACTUAL_DELIVERY_MINUTES                                    53\n",
+      "CLOUD_COVERAGE                                              5\n",
+      "TEMPERATURE                                                40\n",
+      "WIND_SPEED                                                926\n",
+      "PRECIPITATION                                              23\n",
+      "dtype: int64\n",
+      "Statistiky a grafy jsou uloženy ve složce 'Data/Statistiky'\n"
+     ]
+    }
+   ],
    "source": [
     "# === Základní analýza pro každý dataset\n",
     "for nazev, soubor in soubory.items():\n",
@@ -92,133 +277,6 @@
     "        f.write(df.nunique().to_string())\n",
     "\n",
     "print(\"Statistiky a grafy jsou uloženy ve složce 'Data/Statistiky'\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "892a4678",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import pymongo\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import os\n",
-    "\n",
-    "# Připojení k MongoDB\n",
-    "client = pymongo.MongoClient(\"mongodb://martin:rampouch@127.0.0.1:27117/?authMechanism=DEFAULT\")\n",
-    "db = client[\"RampaBase\"]\n",
-    "config_db = client[\"config\"]\n",
-    "\n",
-    "# Výstupní složka\n",
-    "os.makedirs(\"Statistiky\", exist_ok=True)\n",
-    "\n",
-    "# Získání všech shardovaných kolekcí v databázi RampaBase\n",
-    "collections_info = config_db.collections.find({\"_id\": {\"$regex\": \"^RampaBase\\.\"}})\n",
-    "collection_entries = list(collections_info)\n",
-    "\n",
-    "# Shromáždíme výsledky pro všechny kolekce\n",
-    "all_data = []\n",
-    "\n",
-    "for entry in collection_entries:\n",
-    "    ns = entry[\"_id\"]\n",
-    "    collection_name = ns.split(\".\")[1]\n",
-    "    collection_uuid = entry[\"uuid\"]\n",
-    "\n",
-    "    # Chunky podle UUID\n",
-    "    chunks_pipeline = [\n",
-    "        {\"$match\": {\"uuid\": collection_uuid}},\n",
-    "        {\"$group\": {\"_id\": \"$shard\", \"chunks\": {\"$sum\": 1}}}\n",
-    "    ]\n",
-    "    chunks = list(config_db.chunks.aggregate(chunks_pipeline))\n",
-    "    if not chunks:\n",
-    "        continue\n",
-    "    chunks_df = pd.DataFrame(chunks).rename(columns={\"_id\": \"shard\"})\n",
-    "\n",
-    "    # Počet dokumentů v kolekci\n",
-    "    try:\n",
-    "        total_docs = db[collection_name].estimated_document_count()\n",
-    "    except Exception:\n",
-    "        total_docs = 0\n",
-    "\n",
-    "    total_chunks = chunks_df[\"chunks\"].sum()\n",
-    "    chunks_df[\"collection\"] = collection_name\n",
-    "    chunks_df[\"documents\"] = (chunks_df[\"chunks\"] / total_chunks * total_docs).round().astype(int)\n",
-    "\n",
-    "    all_data.append(chunks_df)\n",
-    "\n",
-    "# Spojíme vše do jednoho DataFrame\n",
-    "final_df = pd.concat(all_data, ignore_index=True)\n",
-    "\n",
-    "# Vykreslíme jeden společný graf: stacked bar plot podle kolekcí\n",
-    "plt.figure(figsize=(12, 7))\n",
-    "sns.barplot(data=final_df, x=\"collection\", y=\"documents\", hue=\"shard\")\n",
-    "plt.title(\"Odhadovaný počet dokumentů na shardech pro kolekce v RampaBase\")\n",
-    "plt.ylabel(\"Počet dokumentů (odhad)\")\n",
-    "plt.xlabel(\"Kolekce\")\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(\"Statistiky/shard_summary_all_collections.png\")\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0e45612e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pymongo\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "\n",
-    "client = pymongo.MongoClient(\"mongodb://martin:rampouch@127.0.0.1:27117/?authMechanism=DEFAULT\")\n",
-    "db = client[\"RampaBase\"]\n",
-    "config_db = client[\"config\"]\n",
-    "\n",
-    "os.makedirs(\"Statistiky\", exist_ok=True)\n",
-    "\n",
-    "collection_entries = list(config_db.collections.find({\"_id\": {\"$regex\": \"^RampaBase\\\\.\"}}))\n",
-    "\n",
-    "for entry in collection_entries:\n",
-    "    ns = entry[\"_id\"]\n",
-    "    collection_name = ns.split(\".\")[1]\n",
-    "    collection_uuid = entry.get(\"uuid\")\n",
-    "    if not collection_uuid:\n",
-    "        continue\n",
-    "\n",
-    "    chunks = list(config_db.chunks.aggregate([\n",
-    "        {\"$match\": {\"uuid\": collection_uuid}},\n",
-    "        {\"$group\": {\"_id\": \"$shard\", \"chunks\": {\"$sum\": 1}}}\n",
-    "    ]))\n",
-    "    if not chunks:\n",
-    "        continue\n",
-    "\n",
-    "    chunks_df = pd.DataFrame(chunks).rename(columns={\"_id\": \"shard\"})\n",
-    "\n",
-    "    try:\n",
-    "        total_docs = db[collection_name].estimated_document_count()\n",
-    "    except Exception:\n",
-    "        continue\n",
-    "\n",
-    "    total_chunks = chunks_df[\"chunks\"].sum()\n",
-    "    if total_chunks == 0 or total_docs == 0:\n",
-    "        continue\n",
-    "\n",
-    "    chunks_df[\"documents\"] = (chunks_df[\"chunks\"] / total_chunks * total_docs).round().astype(int)\n",
-    "\n",
-    "    if chunks_df[\"documents\"].sum() > 0 and not chunks_df[\"documents\"].isnull().any():\n",
-    "        fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "        ax.pie(chunks_df['documents'], labels=chunks_df['shard'], autopct='%1.1f%%', startangle=90)\n",
-    "        ax.set_title(f\"Distribuce dokumentů – {collection_name}\")\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(f\"Statistiky/pie_{collection_name}.png\")\n",
-    "        plt.close()\n"
    ]
   }
  ],
