--- a/Data/Analyza Dat Jupyter.ipynb
+++ b/Data/Analyza Dat Jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f0cf7a49",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "562b4856",
    "metadata": {},
    "outputs": [],
@@ -36,195 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dcef28b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Dataset: Ad_table ===\n",
-      "Počet řádků: 268255\n",
-      "Počet sloupců: 24\n",
-      "Počet null hodnot ve sloupcích:\n",
-      "Maker               0\n",
-      " Genmodel           0\n",
-      " Genmodel_ID        0\n",
-      "Adv_ID              0\n",
-      "Adv_year            0\n",
-      "Adv_month           0\n",
-      "Color           21875\n",
-      "Reg_year            7\n",
-      "Bodytype          954\n",
-      "Runned_Miles     1055\n",
-      "Engin_size       2064\n",
-      "Gearbox           167\n",
-      "Fuel_type         409\n",
-      "Price            1145\n",
-      "Engine_power    31811\n",
-      "Annual_Tax      46675\n",
-      "Wheelbase       27998\n",
-      "Height          27801\n",
-      "Width           28080\n",
-      "Length          27801\n",
-      "Average_mpg     41933\n",
-      "Top_speed       43602\n",
-      "Seat_num         6474\n",
-      "Door_num         4553\n",
-      "dtype: int64\n",
-      "Počet unikátních hodnot ve sloupcích:\n",
-      "Maker               88\n",
-      " Genmodel          896\n",
-      " Genmodel_ID       881\n",
-      "Adv_ID          268255\n",
-      "Adv_year            10\n",
-      "Adv_month           15\n",
-      "Color               22\n",
-      "Reg_year            26\n",
-      "Bodytype            18\n",
-      "Runned_Miles     72420\n",
-      "Engin_size          74\n",
-      "Gearbox              3\n",
-      "Fuel_type           13\n",
-      "Price            20456\n",
-      "Engine_power       466\n",
-      "Annual_Tax          28\n",
-      "Wheelbase          427\n",
-      "Height             579\n",
-      "Width              475\n",
-      "Length             984\n",
-      "Average_mpg        358\n",
-      "Top_speed          138\n",
-      "Seat_num            10\n",
-      "Door_num             7\n",
-      "dtype: int64\n",
-      "=== Dataset: Image_table ===\n",
-      "Počet řádků: 1451784\n",
-      "Počet sloupců: 5\n",
-      "Počet null hodnot ve sloupcích:\n",
-      "Genmodel_ID                  0\n",
-      "Image_ID                     0\n",
-      "Image_name                   0\n",
-      "Predicted_viewpoint          0\n",
-      "Quality_check          1364791\n",
-      "dtype: int64\n",
-      "Počet unikátních hodnot ve sloupcích:\n",
-      "Genmodel_ID                865\n",
-      "Image_ID               1450932\n",
-      "Image_name             1451784\n",
-      "Predicted_viewpoint          9\n",
-      "Quality_check                2\n",
-      "dtype: int64\n",
-      "=== Dataset: Price_table ===\n",
-      "Počet řádků: 6333\n",
-      "Počet sloupců: 5\n",
-      "Počet null hodnot ve sloupcích:\n",
-      "Maker          0\n",
-      "Genmodel       0\n",
-      "Genmodel_ID    0\n",
-      "Year           0\n",
-      "Entry_price    0\n",
-      "dtype: int64\n",
-      "Počet unikátních hodnot ve sloupcích:\n",
-      "Maker            60\n",
-      "Genmodel        632\n",
-      "Genmodel_ID     647\n",
-      "Year             24\n",
-      "Entry_price    3402\n",
-      "dtype: int64\n",
-      "=== Dataset: Sales_table ===\n",
-      "Počet řádků: 773\n",
-      "Počet sloupců: 23\n",
-      "Počet null hodnot ve sloupcích:\n",
-      "Maker          0\n",
-      "Genmodel       0\n",
-      "Genmodel_ID    0\n",
-      "2020           0\n",
-      "2019           0\n",
-      "2018           0\n",
-      "2017           0\n",
-      "2016           0\n",
-      "2015           0\n",
-      "2014           0\n",
-      "2013           0\n",
-      "2012           0\n",
-      "2011           0\n",
-      "2010           0\n",
-      "2009           0\n",
-      "2008           0\n",
-      "2007           0\n",
-      "2006           0\n",
-      "2005           0\n",
-      "2004           0\n",
-      "2003           0\n",
-      "2002           0\n",
-      "2001           0\n",
-      "dtype: int64\n",
-      "Počet unikátních hodnot ve sloupcích:\n",
-      "Maker           73\n",
-      "Genmodel       772\n",
-      "Genmodel_ID    734\n",
-      "2020           321\n",
-      "2019           355\n",
-      "2018           359\n",
-      "2017           357\n",
-      "2016           354\n",
-      "2015           337\n",
-      "2014           337\n",
-      "2013           325\n",
-      "2012           316\n",
-      "2011           301\n",
-      "2010           303\n",
-      "2009           314\n",
-      "2008           302\n",
-      "2007           302\n",
-      "2006           295\n",
-      "2005           278\n",
-      "2004           261\n",
-      "2003           249\n",
-      "2002           220\n",
-      "2001           213\n",
-      "dtype: int64\n",
-      "=== Dataset: Wolt ===\n",
-      "Počet řádků: 18706\n",
-      "Počet sloupců: 14\n",
-      "Počet null hodnot ve sloupcích:\n",
-      "Unnamed: 0                                                0\n",
-      "TIMESTAMP                                                 0\n",
-      "ACTUAL_DELIVERY_MINUTES - ESTIMATED_DELIVERY_MINUTES      0\n",
-      "ITEM_COUNT                                                0\n",
-      "USER_LAT                                                  0\n",
-      "USER_LONG                                                 0\n",
-      "VENUE_LAT                                                 0\n",
-      "VENUE_LONG                                                0\n",
-      "ESTIMATED_DELIVERY_MINUTES                                0\n",
-      "ACTUAL_DELIVERY_MINUTES                                   0\n",
-      "CLOUD_COVERAGE                                          277\n",
-      "TEMPERATURE                                             277\n",
-      "WIND_SPEED                                              277\n",
-      "PRECIPITATION                                             0\n",
-      "dtype: int64\n",
-      "Počet unikátních hodnot ve sloupcích:\n",
-      "Unnamed: 0                                              18706\n",
-      "TIMESTAMP                                               15135\n",
-      "ACTUAL_DELIVERY_MINUTES - ESTIMATED_DELIVERY_MINUTES       72\n",
-      "ITEM_COUNT                                                 11\n",
-      "USER_LAT                                                   49\n",
-      "USER_LONG                                                  72\n",
-      "VENUE_LAT                                                  55\n",
-      "VENUE_LONG                                                 84\n",
-      "ESTIMATED_DELIVERY_MINUTES                                 55\n",
-      "ACTUAL_DELIVERY_MINUTES                                    53\n",
-      "CLOUD_COVERAGE                                              5\n",
-      "TEMPERATURE                                                40\n",
-      "WIND_SPEED                                                926\n",
-      "PRECIPITATION                                              23\n",
-      "dtype: int64\n",
-      "Statistiky a grafy jsou uloženy ve složce 'Data/Statistiky'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Základní analýza pro každý dataset\n",
     "for nazev, soubor in soubory.items():\n",
@@ -278,11 +93,36 @@
     "\n",
     "print(\"Statistiky a grafy jsou uloženy ve složce 'Data/Statistiky'\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e55b17c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Ad_table.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Načtení souboru\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mAd_table.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m df.columns = df.columns.str.strip()\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Základní informace\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ASUS\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1026\u001b[39m, in \u001b[36mread_csv\u001b[39m\u001b[34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[39m\n\u001b[32m   1013\u001b[39m kwds_defaults = _refine_defaults_read(\n\u001b[32m   1014\u001b[39m     dialect,\n\u001b[32m   1015\u001b[39m     delimiter,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1022\u001b[39m     dtype_backend=dtype_backend,\n\u001b[32m   1023\u001b[39m )\n\u001b[32m   1024\u001b[39m kwds.update(kwds_defaults)\n\u001b[32m-> \u001b[39m\u001b[32m1026\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ASUS\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:620\u001b[39m, in \u001b[36m_read\u001b[39m\u001b[34m(filepath_or_buffer, kwds)\u001b[39m\n\u001b[32m    617\u001b[39m _validate_names(kwds.get(\u001b[33m\"\u001b[39m\u001b[33mnames\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[32m    619\u001b[39m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m620\u001b[39m parser = \u001b[43mTextFileReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    622\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[32m    623\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ASUS\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1620\u001b[39m, in \u001b[36mTextFileReader.__init__\u001b[39m\u001b[34m(self, f, engine, **kwds)\u001b[39m\n\u001b[32m   1617\u001b[39m     \u001b[38;5;28mself\u001b[39m.options[\u001b[33m\"\u001b[39m\u001b[33mhas_index_names\u001b[39m\u001b[33m\"\u001b[39m] = kwds[\u001b[33m\"\u001b[39m\u001b[33mhas_index_names\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m   1619\u001b[39m \u001b[38;5;28mself\u001b[39m.handles: IOHandles | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1620\u001b[39m \u001b[38;5;28mself\u001b[39m._engine = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ASUS\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1880\u001b[39m, in \u001b[36mTextFileReader._make_engine\u001b[39m\u001b[34m(self, f, engine)\u001b[39m\n\u001b[32m   1878\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[32m   1879\u001b[39m         mode += \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1880\u001b[39m \u001b[38;5;28mself\u001b[39m.handles = \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1881\u001b[39m \u001b[43m    \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1882\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1883\u001b[39m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1884\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcompression\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1885\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmemory_map\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmemory_map\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1886\u001b[39m \u001b[43m    \u001b[49m\u001b[43mis_text\u001b[49m\u001b[43m=\u001b[49m\u001b[43mis_text\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1887\u001b[39m \u001b[43m    \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mencoding_errors\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstrict\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1888\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43moptions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstorage_options\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1889\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1890\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m.handles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1891\u001b[39m f = \u001b[38;5;28mself\u001b[39m.handles.handle\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ASUS\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\io\\common.py:873\u001b[39m, in \u001b[36mget_handle\u001b[39m\u001b[34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[39m\n\u001b[32m    868\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[32m    869\u001b[39m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[32m    870\u001b[39m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[32m    871\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m ioargs.encoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs.mode:\n\u001b[32m    872\u001b[39m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m873\u001b[39m         handle = \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[32m    874\u001b[39m \u001b[43m            \u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    875\u001b[39m \u001b[43m            \u001b[49m\u001b[43mioargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    876\u001b[39m \u001b[43m            \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[43mioargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    877\u001b[39m \u001b[43m            \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m=\u001b[49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    878\u001b[39m \u001b[43m            \u001b[49m\u001b[43mnewline\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    879\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    880\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    881\u001b[39m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[32m    882\u001b[39m         handle = \u001b[38;5;28mopen\u001b[39m(handle, ioargs.mode)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'Ad_table.csv'"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
